updated api support for role management
